[package]
name = "snip1155-reference-impl"
version = "0.1.0"
authors = ["DDT5"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
snafu = { version = "0.6.3" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.7"
cosmwasm-std = { version = "0.10.1", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
secret-toolkit = { version = "0.3.0", features = ["permit"] } # Uncomment this for extra tools

# for viewing_key
sha2 = { version = "0.9.1", default-features = false }
base64 = "0.12.3"
rand_chacha = { version = "0.2.2", default-features = false }
rand_core = { version = "0.5.1", default-features = false }
subtle = { version = "2.2.3", default-features = false }

# additions
# uint = "0.9.3"

[dev-dependencies]
cosmwasm-schema = "0.10.1"
serde_json = "1.0.8"
