[package]
name = "snip1155-reference-impl"
version = "0.2.0-alpha.1"
authors = ["DDT5"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
#snafu = { version = "0.6.3" }
serde = { version = "1.0.158", default-features = false, features = ["derive"] }
schemars = "0.8.12"
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.10"  }
secret-toolkit = { version = "0.9.0", default-features = false, features = [
  "storage", "viewing-key", "permit", "serialization", 
  #"crypto", "utils"
] }
# getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
cosmwasm-schema = "1.1.8"
# serde_json = "1.0.8"
